<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:tooltipText="@string/title_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_trips"
        android:icon="@drawable/ic_baseline_directions_car_24"
        android:contentDescription="@string/title_trips"
        android:tooltipText="@string/title_trips"
        android:title="@string/title_trips" />

    <item
        android:id="@+id/navigation_rfid"
        android:icon="@drawable/ic_baseline_qr_code_24"
        android:title="@string/title_rfid" />

    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_baseline_phone_24"
        android:title="@string/title_help"/>

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_account"/>

</menu>