<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mungoapp.dashboard.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_trips"
        android:name="com.example.mungoapp.dashboard.ui.trips.TripsFragment"
        android:label="@string/title_trips"
        tools:layout="@layout/fragment_trips" />

    <fragment
        android:id="@+id/navigation_rfid"
        android:name="com.example.mungoapp.dashboard.ui.rfid.RfidFragment"
        android:label="@string/title_rfid"
        tools:layout="@layout/fragment_rfid" />

    <fragment
        android:id="@+id/navigation_help"
        android:name="com.example.mungoapp.dashboard.ui.help.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help"/>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.mungoapp.dashboard.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account"/>
</navigation>